fix: modal positioning and margin top spacing

--- a/css/modal.css
+++ b/css/modal.css
@@ -35,6 +35,7 @@
     border-style: solid;
     border-width: 15px;
     border-color: rgb(124, 63, 237);
+    position: unset;
   }
   
   :is(.modal-close, .dialog-close) {
