--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Poppins';
     padding: 1rem;
+    margin-top: 60px;
 }
 
 h1 {
